--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,7 +174,7 @@ jobs:
       - run:
           name: Update the images we're using
           command: |
-            cd ./monitor-ci && make update && make build NODE=cypress && make build NODE=ingress && make build NODE=dex
+            cd ./monitor-ci && make update && make build NODE=ingress && make build NODE=dex
             docker tag local/cypress:latest quay.io/influxdb/ui-e2e:${CIRCLE_SHA1}
             docker load < ~/docker-cache/image.tar
             docker tag quay.io/influxdb/ui-acceptance:${CIRCLE_SHA1} quay.io/influxdb/ui-acceptance:latest
@@ -193,6 +193,7 @@ jobs:
           command: |
             INGRESS_HOST=$(grep "INGRESS_HOST=" ./monitor-ci/.env | cut -d '=' -f2);
             grep -qxF "127.0.0.1 ${INGRESS_HOST}" /etc/hosts || sudo -- sh -c "echo \"127.0.0.1 ${INGRESS_HOST}\" >> /etc/hosts";
+            make rebuild NODE=dex;
             ps -ef | grep Xvfb | grep -v grep | awk '{print $2}' | sudo xargs kill -9
       - run:
           name: Run e2e tests
@@ -229,7 +230,7 @@ jobs:
       - run:
           name: Update the images we're using
           command: |
-            cd ./monitor-ci && make update && make build NODE=cypress && make build NODE=ingress
+            cd ./monitor-ci && make update && make build NODE=ingress
             docker load < ~/docker-cache-oss/image.tar
             docker tag quay.io/influxdb/ui-acceptance:${CIRCLE_SHA1} quay.io/influxdb/ui-acceptance:latest
       - run:
@@ -243,6 +244,7 @@ jobs:
           command: |
             INGRESS_HOST=$(grep "INGRESS_HOST=" ./monitor-ci/.env | cut -d '=' -f2);
             grep -qxF "127.0.0.1 ${INGRESS_HOST}" /etc/hosts || sudo -- sh -c "echo \"127.0.0.1 ${INGRESS_HOST}\" >> /etc/hosts";
+            make rebuild NODE=dex;
             ps -ef | grep Xvfb | grep -v grep | awk '{print $2}' | sudo xargs kill -9
       - run:
           name: Run e2e tests
@@ -280,7 +282,7 @@ jobs:
       - run:
           name: Update the images we're using
           command: |
-            cd ./monitor-ci && make update && make build NODE=cypress && make build NODE=ingress && make build NODE=dex
+            cd ./monitor-ci && make update && make build NODE=ingress && make build NODE=dex
             docker load < ~/docker-cache/image.tar
             docker tag quay.io/influxdb/ui-acceptance:${CIRCLE_SHA1} quay.io/influxdb/ui-acceptance:latest
       - run:
@@ -291,6 +293,7 @@ jobs:
           command: |
             INGRESS_HOST=$(grep "INGRESS_HOST=" ./monitor-ci/.env | cut -d '=' -f2);
             grep -qxF "127.0.0.1 ${INGRESS_HOST}" /etc/hosts || sudo -- sh -c "echo \"127.0.0.1 ${INGRESS_HOST}\" >> /etc/hosts";
+            make rebuild NODE=dex;
             ps -ef | grep Xvfb | grep -v grep | awk '{print $2}' | sudo xargs kill -9
       - run:
           name: Run e2e tests
@@ -438,6 +441,7 @@ jobs:
           command: |
             INGRESS_HOST=$(grep "INGRESS_HOST=" ./monitor-ci/.env | cut -d '=' -f2);
             grep -qxF "127.0.0.1 ${INGRESS_HOST}" /etc/hosts || sudo -- sh -c "echo \"127.0.0.1 ${INGRESS_HOST}\" >> /etc/hosts";
+            make rebuild NODE=dex;
             ps -ef | grep Xvfb | grep -v grep | awk '{print $2}' | sudo xargs kill -9
       - run:
           name: Update the images we're using
